--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+# Changes in version: toOrdinal 1.0-0.0
+
+* Building GitHub-pages website and documentation
+
 # Changes in version: toOrdinal_0.0-8
 
 * Building GitHub-pages website and documentation
