--- a/vignettes/toOrdinal.Rmd
+++ b/vignettes/toOrdinal.Rmd
@@ -1,4 +1,5 @@
 ---
+title: "Getting started with toOrdinal"
 author: "Damian W Betebenner"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
