Update of vignettes

--- a/vignettes/releases/toOrdinal-0.0-1.Rmd
+++ b/vignettes/releases/toOrdinal-0.0-1.Rmd
@@ -3,16 +3,23 @@ title: "toOrdinal 0.0-1"
 ---
 
 ```{r, echo = FALSE}
-knitr::opts_chunk$set(comment = "#>", collapse = TRUE)
+is_html_output = function() {
+  knitr::opts_knit$get("rmarkdown.pandoc.to")=="html"
+}
+knitr::opts_chunk$set(collapse = TRUE, comment = "", prompt=TRUE, fig.dpi = 96)
+if (is_html_output()) {
+    options(width=1000)
+}
 ```
 
 
 This is the initial release of the **toOrdinal** package. The **toOrdinal** package was developed to convert cardinal to ordinal numbers.
 Because ordinal numbers are language specific, the package will have different options for different languages that will be added as time permits and with the help from contributors.
 
-```r
+```{r}
 library(toOrdinal)
-print(toOrdinal(5))
+toOrdinal(5)
+sapply(1:20, toOrdinal)
 ```
 
 For complete `toOrdinal` documentation, see the [documentation](https://CenterForAssessment.github.io/toOrdinal/reference/toOrdinal.html)
