--- a/vignettes/releases/toOrdinal-1.0-0.0.Rmd
+++ b/vignettes/releases/toOrdinal-1.0-0.0.Rmd
@@ -3,7 +3,13 @@ title: "toOrdinal 1.0-0.0"
 ---
 
 ```{r, echo = FALSE}
-knitr::opts_chunk$set(comment = "#>", collapse = TRUE)
+is_html_output = function() {
+  knitr::opts_knit$get("rmarkdown.pandoc.to")=="html"
+}
+knitr::opts_chunk$set(collapse = TRUE, comment = "", prompt=TRUE, fig.dpi = 96)
+if (is_html_output()) {
+    options(width=1000)
+}
 ```
 
 
