--- a/inst/doc/toOrdinal.Rmd
+++ b/inst/doc/toOrdinal.Rmd
@@ -60,6 +60,16 @@ toOrdinal(5, language="Swedish")
 
 Current languages supported include: English, German, French, Spanish, and Swedish.
 
+Since Version 1.1, the function `toOrdinalDate` converts calendar dates to a long format, ordinal form.
+
+```{r}
+toOrdinalDate()
+toOrdinalDate("2017-12-25")
+```
+
+If no argument is provided to `toOrdinalDate`, then the current date derived from `Sys.date()` is used to created to ordinal version of the calendar date.
+If a date is supplied, then a character string of the form "YYYY-MM-DD" must be supplied that is then converted to a formal date. Like with the function `toOrdinal`
+the potential exists for multiple language support with `toOrdinalDate`. However, the only language currently supported by `toOrdinalDate` is English.
 
 ## Examples
 
@@ -68,6 +78,7 @@ The first argument, `n`, is the cardinal number to be converted to an ordinal nu
 ```{r}
 sapply(1:10, toOrdinal)
 ```
+
 
 
 # Contributions & Requests
