--- a/vignettes/toOrdinal.Rmd
+++ b/vignettes/toOrdinal.Rmd
@@ -67,8 +67,8 @@ toOrdinalDate()
 toOrdinalDate("2017-12-25")
 ```
 
-If no argument is provided to `toOrdinalDate`, then the current date derived from `Sys.date()` is used to created to ordinal version of the calendar date.
-If a date is supplied, then a character string of the form "YYYY-MM-DD" must be supplied that is then converted to a formal date. Like with the function `toOrdinal`
+If no argument is provided to `toOrdinalDate`, then the current date derived from `Sys.date()` is used to create the ordinal version of the calendar date.
+If a date is supplied, then it must be supplied as a character string of the form "YYYY-MM-DD" that is then converted to the more formal date format. Like with the function `toOrdinal`
 the potential exists for multiple language support with `toOrdinalDate`. However, the only language currently supported by `toOrdinalDate` is English.
 
 ## Examples
