Updating to 1.2 and adding support for Dutch

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,9 @@
 # toOrdinal 1.1-0.0
 
+* Added support for Dutch (Thanks @huisman)
+
+# toOrdinal 1.1-0.0
+
 * Updated GitHub-pages website and documentation
 * Fixed minor bugs in code
 * Adding toOrdinalDate that converts a ####-##-## date to a pretty format like December 25th, 2018
