--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+# toOrdinal 1.3-0.0
+
+* Vectorized toOrdinal and toOrdinalDate
+
 # toOrdinal 1.2-0.0
 
 * Added support for Dutch (Thanks @huisman)
